--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "index.js",
   "repository": "https://github.com/statico/node-acme-bleach.git",
   "author": "Ian Langworth <ian@langworth.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "tape": "^4.8.0"
+  }
 }
